<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.PlayFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Play">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.8"
            android:contentDescription="@string/worldPlay"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/nature2" />

        <ImageView
            android:id="@+id/lLeg"
            android:layout_width="10dp"
            android:layout_height="19dp"
            android:layout_marginStart="220dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/lLeg"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/torso"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/l_leg" />

        <ImageView
            android:id="@+id/rLeg"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:contentDescription="@string/rLeg"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/lLeg"
            app:layout_constraintTop_toBottomOf="@+id/torso"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/r_leg" />

        <ImageView
            android:id="@+id/rArm"
            android:layout_width="8dp"
            android:layout_height="21dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="124dp"
            android:contentDescription="@string/rArm"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/torso"
            app:layout_constraintTop_toBottomOf="@+id/head"
            app:srcCompat="@drawable/r_hand" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="215dp"
            android:layout_height="328dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/gallow"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.121"
            app:srcCompat="@drawable/gallow" />

        <ImageView
            android:id="@+id/torso"
            android:layout_width="25dp"
            android:layout_height="27dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/torso1"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.62"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.301"
            app:srcCompat="@drawable/torso" />

        <ImageView
            android:id="@+id/head"
            android:layout_width="43dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/head"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/torso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/blink" />

        <ImageView
            android:id="@+id/lArm"
            android:layout_width="11dp"
            android:layout_height="19dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/lArm"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/torso"
            app:layout_constraintTop_toBottomOf="@+id/head"
            app:srcCompat="@drawable/l_hand" />

        <EditText
            android:id="@+id/input"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/input"
            android:maxLength="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_red_light"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.29" />

        <TextView
            android:id="@+id/word"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:fontFamily="monospace"
            android:letterSpacing="0.2"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.426" />

        <ImageButton
            android:id="@+id/check"
            android:layout_width="81dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/check"
            android:onClick="onCheck"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499"
            app:srcCompat="@drawable/button_check" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="89dp"
            android:layout_height="67dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/squareBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26"
            app:srcCompat="@drawable/square" />

        <TextView
            android:id="@+id/usedLetters"
            android:layout_width="0dp"
            android:layout_height="109dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </android.support.constraint.ConstraintLayout>

</FrameLayout>